--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
 alembic==1.11.1
 async-timeout==4.0.2
 blinker==1.6.2
+certifi==2023.7.22
+charset-normalizer==3.3.1
 click==8.1.7
 colorama==0.4.6
-Flask==2.3.3
+flask==2.3.3
 Flask-JWT-Extended==4.5.2
+Flask-Mail==0.9.1
 flask-marshmallow==0.15.0
 Flask-Migrate==4.0.5
-Flask-SQLAlchemy==3.1.1
+flask-sqlalchemy==3.1.1
 greenlet==2.0.2
+idna==3.4
+importlib-metadata==6.8.0
+importlib-resources==6.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.4
@@ -16,8 +22,13 @@ MarkupSafe==2.0.0
 marshmallow==3.20.1
 marshmallow-sqlalchemy==0.29.0
 packaging==23.1
+pkg-resources==0.0.0
 PyJWT==2.8.0
 python-dotenv==1.0.0
+requests==2.31.0
 SQLAlchemy==2.0.20
-typing_extensions==4.8.0
-Werkzeug==2.3.7
+stripe==7.1.0
+typing-extensions==4.8.0
+urllib3==2.0.7
+werkzeug==2.3.7
+zipp==3.17.0
